# gom_l6o

./: CMakeLists.txt  README.md  package.xml
launch/: tangent_calc.launch.py
src/: tangent_publisher.cpp  tangent_subscriber.cpp
