<?xml version="1.0"?>
<package format="2">
  <name>tangent_calc</name>
  <version>0.0.0</version>
  <description>tangent calculator</description>
  <maintainer email="gombos.janos@hallgato.sze.hu">Gombos Janos</maintainer>
  <license>GNU General Public License v3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
